[metadata]
name = terrapyst
version = attr: terrapyst.VERSION
description = My package description
long_description = file: README.md
license = All Rights Reserved

[options]
packages = find:
install_requires =

[options.package_data]
terrapyst-stubs = __init__.pyi

[options.extras_require]
dev =
  black
  glom
  isort
  pytest
  pytest-cov

[mypy]
files = terrapyst